3.3.8 fixes